target-spec-miette/tests/datatest-snapshot/snapshots/expr-invalid/unquoted-value-display.snap
---
source: target-spec-miette/tests/datatest-snapshot/expr.rs
expression: "format!(\"{:?}\", miette::Report::new_boxed(diagnostic))"
snapshot_kind: text
---
  [31m×[0m error parsing cfg() expression
   ╭────
 [2m1[0m │ cfg(target_os = none)
   · [35;1m                ──┬─[0m
   ·                   [35;1m╰── [35;1mexpected a `"` here[0m[0m
   ╰────
